--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             </div>
         </div>
         <div class="px-4 py-5 my-5 text-center"> <img class="d-block mx-auto mb-4"
-                src="download.jpg" alt="" width="72" height="57">
+                src="image.png" alt="" width="72" height="57">
             <h1 class="display-5 fw-bold text-body-emphasis">MVMS Tech Club</h1>
             <div class="col-lg-6 mx-auto">
                 <p class="lead mb-4">Welcome to MVMS Tech Club.</p>
@@ -65,5 +65,6 @@
         </div>
     </header>
 </body>
+
 
 </html>
