--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <p class="lead mb-4">Welcome to MVMS Tech Club.</p>
                 <ln></ln>
                 <p class="lead mb-4">In this club we will discuss new consumer technologies and trends.</p>
-                    <button type="button" class="btn btn-outline-info btn-lg"><a href="https://www.google.com">Join Club!</a></button>
+                    <button type="button" class="btn btn-outline-info btn-lg"><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&list=RDdQw4w9WgXcQ&start_radio=1">Join Club!</a></button>
             </div>
         </div>
     </header>
@@ -68,3 +68,4 @@
 
 
 </html>
+
